--- a/pages/TeamSearch/index.html
+++ b/pages/TeamSearch/index.html
@@ -6,5 +6,7 @@
     <link rel="stylesheet" href="style.css" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    내가 개발할거
+  </body>
 </html>
