--- a/pages/TeamSearch/index.html
+++ b/pages/TeamSearch/index.html
@@ -1,12 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
-  </head>
-  <body>
-    내가 개발할거
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="style.css" />
+  <title>Modal</title>
+</head>
+
+<body>
+  <button type="button" data-bs-toggle="modal" data-bs-target="#exampleModal">
+    <!-- 멤버 사진 -->
+    <img src="https://upload.wikimedia.org/wikipedia/commons/2/2f/Square_definition.svg" alt="...">
+  </button>
+  <div class="modal" id="exampleModal" tabindex="-1">
+    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">강준영</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body" style="max-height:60vh; overflow-y:auto;">
+          <div class="container-fluid d-flex flex-column align-items-center" style="height:500px;">
+            <div class="row g-3 align-items-center w-100 profile-row flex-grow-1">
+              <div class="col-12 col-md-6 d-flex justify-content-center">
+                <div class="card w-100 profile-card" style="max-width:220px;">
+                  <div class="card-body d-flex justify-content-center align-items-center" style="height:220px;">
+                    <!-- 내용사진 -->
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/2/2f/Square_definition.svg" alt="..."
+                      class="img-fluid rounded border" style="max-width:180px; max-height:180px;" />
+                  </div>
+                </div>
+              </div>
+              <div class="col-12 col-md-6 d-flex justify-content-center">
+                <div class="card w-100 profile-card" style="max-width:220px;">
+                  <div class="card-body"
+                    style="height:220px; display:flex; flex-direction:column; justify-content:center; font-size:0.8rem;">
+                    <!-- 사람에 맞게 입력 -->
+                    <div class="mb-2"><b>직책:</b> Staff</div>
+                    <div class="mb-2"><b>연락처:</b> 010-4754-7393</div>
+                    <div class="mb-2"><b>메일:</b> kangh2580@naver.com</div>
+                    <div class="mb-2"><b>주소:</b> 대전광역시 서구 월평동</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="row mt-3 w-100 advantage-row flex-grow-1">
+              <div class="col-12 col-md-12 d-flex justify-content-center">
+                <div class="card w-100 advantage-card mb-3" style="max-width:none; min-width:0;">
+                  <div class="card-body">
+                    <h6 class="card-title">장점</h6>
+                    <!-- 텍스트 입력 -->
+                    <ul>
+                      <li>dddddddd</li>
+                      <li>dddddddddd</li>
+                      <li>dddd</li>
+                      <li>d</li>
+                      <li>dddddddd</li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <script src="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+
 </html>
