style: class Add

--- a/pages/TeamSearch/index2.html
+++ b/pages/TeamSearch/index2.html
@@ -40,7 +40,7 @@
     </div>
   </nav>
 
-  <main>
+  <main class="main-body">
     <div class="container">
       <div class="main-Main-All">
         <div class="main-Ment">
@@ -58,7 +58,7 @@
       </div>
     </div>
   </main>
-  <footer>
+  <footer class="footer-All">
     <div class="container">
       <div class="louca-image"></div>
 
