chore: Edit img name

--- a/index.html
+++ b/index.html
@@ -1,90 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Main</title>
+    <link
+      rel="stylesheet"
+      href="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
+    />
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Main</title>
-  <link rel="stylesheet" href="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="style.css" />
-</head>
+  <body>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+          <img
+            src="../../assets/img/TeamLogo.png"
+            alt="..."
+            class="img-fluid ms-4"
+            style="max-height: 50px; width: auto"
+          />
+        </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse me-4" id="navbarSupportedContent">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" href="#">Menu</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Menu</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Login</a>
+            </li>
 
-<body>
-  <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">
-        <img src="../../assets/img/Team Logo.png" alt="..." class="img-fluid ms-4"
-          style="max-height: 50px; width: auto" />
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse me-4" id="navbarSupportedContent">
-        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link" href="#">Menu</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Menu</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Login</a>
-          </li>
-
-          <li class="nav-item">
-            <a class="nav-link" href="#">Sign Up</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-
-  <main class="main-body">
-    <div class="container">
-      <div class="main-Main-All">
-        <div class="main-Ment">
-          <div>컨택하고,</div>
-          <div>싱크하고,</div>
-          <div>팀플하자</div>
-        </div>
-        <div class="sub-Ment">
-          <div>안녕하세요.싱클리입니다.</div>
-          <div>저희는 팀을 찾는 서비스를 제공하고 있습니다.</div>
-        </div>
-        <div class="main-btn">
-          <button type="button" class="btn btn-light btn-lg">SYNK</button>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Sign Up</a>
+            </li>
+          </ul>
         </div>
       </div>
-    </div>
-  </main>
-  <footer class="footer-All">
-    <div class="container">
-      <div class="louca-image"></div>
+    </nav>
 
-      <div class="footer-bottom container">
-        <div class="row align-items-center">
-          <div class="col-md-3 logo">
-            <img src="../../assets/img/Team Logo.png" alt="..." class="img-fluid"
-              style="max-height: 50px; width: auto" />
+    <main class="main-body">
+      <div class="container">
+        <div class="main-Main-All">
+          <div class="main-Ment">
+            <div>컨택하고,</div>
+            <div>싱크하고,</div>
+            <div>팀플하자</div>
           </div>
-          <div class="col-md-6 company-info">
-            <div>
-              상호명 : (주)SYNKLY | 대표자 : 공동대표 | 주소 : 우주특별시 지구
-              달로 322,11층(Moon 빌딩)
-            </div>
-
-            <div>
-              고객 문의 : 02-123-4567 (운영시간 00~00시, 점심시간 12:30~13:40)
-              팩스 : 02-1234-5678 | 광고/제휴 문의 : rkdwnsdud2580@gmail.com
-            </div>
-            <div>ⓒ (주)SYNKLY ALL RIGHTS RESERVED. DESIGN BY MORENVY.COM</div>
+          <div class="sub-Ment">
+            <div>안녕하세요.싱클리입니다.</div>
+            <div>저희는 팀을 찾는 서비스를 제공하고 있습니다.</div>
+          </div>
+          <div class="main-btn">
+            <button type="button" class="btn btn-light btn-lg">SYNK</button>
           </div>
         </div>
       </div>
-    </div>
-  </footer>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
-</body>
+    </main>
+    <footer class="footer-All">
+      <div class="container">
+        <div class="louca-image"></div>
 
+        <div class="footer-bottom container">
+          <div class="row align-items-center">
+            <div class="col-md-3 logo">
+              <img
+                src="../../assets/img/Team Logo.png"
+                alt="..."
+                class="img-fluid"
+                style="max-height: 50px; width: auto"
+              />
+            </div>
+            <div class="col-md-6 company-info">
+              <div>
+                상호명 : (주)SYNKLY | 대표자 : 공동대표 | 주소 : 우주특별시 지구
+                달로 322,11층(Moon 빌딩)
+              </div>
+
+              <div>
+                고객 문의 : 02-123-4567 (운영시간 00~00시, 점심시간 12:30~13:40)
+                팩스 : 02-1234-5678 | 광고/제휴 문의 : rkdwnsdud2580@gmail.com
+              </div>
+              <div>ⓒ (주)SYNKLY ALL RIGHTS RESERVED. DESIGN BY MORENVY.COM</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
+  </body>
 </html>
