--- a/index.html
+++ b/index.html
@@ -6,15 +6,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Main</title>
   <link rel="stylesheet" href="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" />
+  <script src="https://kit.fontawesome.com/009860e372.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="style.css" />
+
 </head>
+<!-- 싱크버튼 눌렀을 때 크기커지게 완료 -->
+<!-- footer에 SNS 넣기  아직 안함-->
+
+<!-- 텍스트 애니메이션 넣고 가운데 로고 1번
+컨텍부터 싱크 팀 234번 5번으로 완료   화살표? 번쩍번쩍 미완-->
 
 <body>
   <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
-        <img src="../../assets/img/Team Logo.png" alt="..." class="img-fluid ms-4"
-          style="max-height: 50px; width: auto" />
+        <img src="assets/img/로고W4.png" alt="..." class="img-fluid ms-4" style="max-height: 40px; width: auto" />
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -43,21 +49,28 @@
   <main class="main-body">
     <div class="container">
       <div class="main-Main-All">
-        <div class="main-Ment">
-          <div>컨택하고,</div>
-          <div>싱크하고,</div>
-          <div>팀플하자</div>
+
+        <div class="ment1">CONTECT</div>
+
+
+        <div class="center-group">
+          <div class="main-Logo-Center">
+            <img src="assets/img/로고W4.png" alt="..." class="img-fluid" style="max-height: 400px; width: auto" />
+          </div>
         </div>
-        <div class="sub-Ment">
-          <div>안녕하세요.싱클리입니다.</div>
-          <div>저희는 팀을 찾는 서비스를 제공하고 있습니다.</div>
+
+
+        <div class="ment2">
+          <a href="#" class="main-Ment2-color">BUILD</a>
         </div>
-        <div class="main-btn">
-          <button type="button" class="btn btn-light btn-lg">SYNK</button>
+        <div class="click-Motion">
+          <i class="fa-regular fa-hand-pointer"></i>
         </div>
+        <div class="ment3">TEAMPLATE</div>
       </div>
     </div>
   </main>
+
   <footer class="footer-All">
     <div class="container">
       <div class="louca-image"></div>
@@ -65,8 +78,7 @@
       <div class="footer-bottom container">
         <div class="row align-items-center">
           <div class="col-md-3 logo">
-            <img src="../../assets/img/Team Logo.png" alt="..." class="img-fluid"
-              style="max-height: 50px; width: auto" />
+            <img src="assets/img/로고W4.png" alt="..." class="img-fluid" style="max-height: 50px; width: auto" />
           </div>
           <div class="col-md-6 company-info">
             <div>
@@ -85,6 +97,37 @@
     </div>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+
+    window.addEventListener("load", function () {
+
+      setTimeout(function () {
+        document.querySelector(".center-group").style.opacity = "1";
+      }, 500);
+
+
+      setTimeout(function () {
+        document.querySelector(".ment1").style.opacity = "1";
+      }, 1500);
+
+
+      setTimeout(function () {
+        document.querySelector(".ment2").style.opacity = "1";
+      }, 2500);
+
+
+      setTimeout(function () {
+        document.querySelector(".ment3").style.opacity = "1";
+      }, 3500);
+
+
+      setTimeout(function () {
+        const clickMotion = document.querySelector(".click-Motion");
+        clickMotion.style.visibility = "visible";
+        clickMotion.style.opacity = "1";
+      }, 4000);
+    });
+  </script>
 </body>
 
 </html>
