--- a/pages/TeamBase/index.html
+++ b/pages/TeamBase/index.html
@@ -83,7 +83,7 @@
                     >
                       <title>HTML5</title>
                       <path
-                        fill="white"
+                        fill="#E34F26"
                         d="M1.5 0h21l-1.91 21.563L11.977 24l-8.564-2.438L1.5 0zm7.031 9.75l-.232-2.718 10.059.003.23-2.622L5.412 4.41l.698 8.01h9.126l-.326 3.426-2.91.804-2.955-.81-.188-2.11H6.248l.33 4.171L12 19.351l5.379-1.443.744-8.157H8.531z"
                       />
                     </svg>
@@ -96,7 +96,7 @@
                     >
                       <title>CSS</title>
                       <path
-                        fill="white"
+                        fill="#663399"
                         d="M0 0v20.16A3.84 3.84 0 0 0 3.84 24h16.32A3.84 3.84 0 0 0 24 20.16V3.84A3.84 3.84 0 0 0 20.16 0Zm14.256 13.08c1.56 0 2.28 1.08 2.304 2.64h-1.608c.024-.288-.048-.6-.144-.84-.096-.192-.288-.264-.552-.264-.456 0-.696.264-.696.84-.024.576.288.888.768 1.08.72.288 1.608.744 1.92 1.296q.432.648.432 1.656c0 1.608-.912 2.592-2.496 2.592-1.656 0-2.4-1.032-2.424-2.688h1.68c0 .792.264 1.176.792 1.176.264 0 .456-.072.552-.24.192-.312.24-1.176-.048-1.512-.312-.408-.912-.6-1.32-.816q-.828-.396-1.224-.936c-.24-.36-.36-.888-.36-1.536 0-1.44.936-2.472 2.424-2.448m5.4 0c1.584 0 2.304 1.08 2.328 2.64h-1.608c0-.288-.048-.6-.168-.84-.096-.192-.264-.264-.528-.264-.48 0-.72.264-.72.84s.288.888.792 1.08c.696.288 1.608.744 1.92 1.296.264.432.408.984.408 1.656.024 1.608-.888 2.592-2.472 2.592-1.68 0-2.424-1.056-2.448-2.688h1.68c0 .744.264 1.176.792 1.176.264 0 .456-.072.552-.24.216-.312.264-1.176-.048-1.512-.288-.408-.888-.6-1.32-.816-.552-.264-.96-.576-1.2-.936s-.36-.888-.36-1.536c-.024-1.44.912-2.472 2.4-2.448m-11.031.018c.711-.006 1.419.198 1.839.63.432.432.672 1.128.648 1.992H9.336c.024-.456-.096-.792-.432-.96-.312-.144-.768-.048-.888.24-.12.264-.192.576-.168.864v3.504c0 .744.264 1.128.768 1.128a.65.65 0 0 0 .552-.264c.168-.24.192-.552.168-.84h1.776c.096 1.632-.984 2.712-2.568 2.688-1.536 0-2.496-.864-2.472-2.472v-4.032c0-.816.24-1.44.696-1.848.432-.408 1.146-.624 1.857-.63"
                       />
                     </svg>
@@ -109,7 +109,7 @@
                     >
                       <title>JavaScript</title>
                       <path
-                        fill="white"
+                        fill="#F7DF1E"
                         d="M0 0h24v24H0V0zm22.034 18.276c-.175-1.095-.888-2.015-3.003-2.873-.736-.345-1.554-.585-1.797-1.14-.091-.33-.105-.51-.046-.705.15-.646.915-.84 1.515-.66.39.12.75.42.976.9 1.034-.676 1.034-.676 1.755-1.125-.27-.42-.404-.601-.586-.78-.63-.705-1.469-1.065-2.834-1.034l-.705.089c-.676.165-1.32.525-1.71 1.005-1.14 1.291-.811 3.541.569 4.471 1.365 1.02 3.361 1.244 3.616 2.205.24 1.17-.87 1.545-1.966 1.41-.811-.18-1.26-.586-1.755-1.336l-1.83 1.051c.21.48.45.689.81 1.109 1.74 1.756 6.09 1.666 6.871-1.004.029-.09.24-.705.074-1.65l.046.067zm-8.983-7.245h-2.248c0 1.938-.009 3.864-.009 5.805 0 1.232.063 2.363-.138 2.711-.33.689-1.18.601-1.566.48-.396-.196-.597-.466-.83-.855-.063-.105-.11-.196-.127-.196l-1.825 1.125c.305.63.75 1.172 1.324 1.517.855.51 2.004.675 3.207.405.783-.226 1.458-.691 1.811-1.411.51-.93.402-2.07.397-3.346.012-2.054 0-4.109 0-6.179l.004-.056z"
                       />
                     </svg>
@@ -131,23 +131,13 @@
                     >
                       <title>Git</title>
                       <path
-                        fill="white"
+                        fill="#F05032"
                         d="M23.546 10.93L13.067.452c-.604-.603-1.582-.603-2.188 0L8.708 2.627l2.76 2.76c.645-.215 1.379-.07 1.889.441.516.515.658 1.258.438 1.9l2.658 2.66c.645-.223 1.387-.078 1.9.435.721.72.721 1.884 0 2.604-.719.719-1.881.719-2.6 0-.539-.541-.674-1.337-.404-1.996L12.86 8.955v6.525c.176.086.342.203.488.348.713.721.713 1.883 0 2.6-.719.721-1.889.721-2.609 0-.719-.719-.719-1.879 0-2.598.182-.18.387-.316.605-.406V8.835c-.217-.091-.424-.222-.6-.401-.545-.545-.676-1.342-.396-2.009L7.636 3.7.45 10.881c-.6.605-.6 1.584 0 2.189l10.48 10.477c.604.604 1.582.604 2.186 0l10.43-10.43c.605-.603.605-1.582 0-2.187"
                       />
                     </svg>
                   </div>
                   <div style="width: 40px; height: 40px">
-                    <svg
-                      role="img"
-                      viewBox="0 0 24 24"
-                      xmlns="http://www.w3.org/2000/svg"
-                    >
-                      <title>Figma</title>
-                      <path
-                        fill="white"
-                        d="M15.852 8.981h-4.588V0h4.588c2.476 0 4.49 2.014 4.49 4.49s-2.014 4.491-4.49 4.491zM12.735 7.51h3.117c1.665 0 3.019-1.355 3.019-3.019s-1.355-3.019-3.019-3.019h-3.117V7.51zm0 1.471H8.148c-2.476 0-4.49-2.014-4.49-4.49S5.672 0 8.148 0h4.588v8.981zm-4.587-7.51c-1.665 0-3.019 1.355-3.019 3.019s1.354 3.02 3.019 3.02h3.117V1.471H8.148zm4.587 15.019H8.148c-2.476 0-4.49-2.014-4.49-4.49s2.014-4.49 4.49-4.49h4.588v8.98zM8.148 8.981c-1.665 0-3.019 1.355-3.019 3.019s1.355 3.019 3.019 3.019h3.117V8.981H8.148zM8.172 24c-2.489 0-4.515-2.014-4.515-4.49s2.014-4.49 4.49-4.49h4.588v4.441c0 2.503-2.047 4.539-4.563 4.539zm-.024-7.51a3.023 3.023 0 0 0-3.019 3.019c0 1.665 1.365 3.019 3.044 3.019 1.705 0 3.093-1.376 3.093-3.068v-2.97H8.148zm7.704 0h-.098c-2.476 0-4.49-2.014-4.49-4.49s2.014-4.49 4.49-4.49h.098c2.476 0 4.49 2.014 4.49 4.49s-2.014 4.49-4.49 4.49zm-.097-7.509c-1.665 0-3.019 1.355-3.019 3.019s1.355 3.019 3.019 3.019h.098c1.665 0 3.019-1.355 3.019-3.019s-1.355-3.019-3.019-3.019h-.098z"
-                      />
-                    </svg>
+                    <img src="/assets/img/figma.png" width="100%" />
                   </div>
                 </div>
               </div>
@@ -170,14 +160,149 @@
       </div>
     </section>
 
-    <!-- ================= 팀원 소개 Section ================= -->
     <section class="section-member py-5 bg-black" id="member">
       <div class="container">
         <!-- 팀원 내용 -->
         <div>
           <h1 class="text-white fw-bold mb-4">팀원</h1>
         </div>
-        <div style="height: 1000px"></div>
+        <div style="height: 1000px" class="member-main team-container">
+          <!-- 팀원 1 -->
+          <div class="member-box">
+            <div class="member-img-box">
+              <button
+                type="button"
+                data-bs-toggle="modal"
+                data-bs-target="#exampleModal"
+                style="all: unset; cursor: pointer"
+              >
+                <!-- 멤버 사진 -->
+                <img src="/assets/img/TeamLogo.png" alt="" />
+              </button>
+            </div>
+            <div class="member-info"></div>
+          </div>
+          <!-- 팀원 2 -->
+          <div class="member-box">
+            <div class="member-img-box">
+              <button
+                type="button"
+                data-bs-toggle="modal"
+                data-bs-target="#exampleModal"
+                style="all: unset; cursor: pointer"
+              >
+                <!-- 멤버 사진 -->
+                <img src="/assets/img/TeamLogo.png" alt="" />
+              </button>
+            </div>
+            <div class="member-info"></div>
+          </div>
+          <!-- 팀원 3 -->
+          <div class="member-box">
+            <div class="member-img-box">
+              <button
+                type="button"
+                data-bs-toggle="modal"
+                data-bs-target="#exampleModal"
+                style="all: unset; cursor: pointer"
+              >
+                <!-- 멤버 사진 -->
+                <img src="/assets/img/TeamLogo.png" alt="" />
+              </button>
+            </div>
+            <div class="member-info"></div>
+          </div>
+        </div>
+
+        <!-- ================= Modal part ================= -->
+        <div class="modal" id="exampleModal" tabindex="-1">
+          <div
+            class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-lg-custom"
+          >
+            <div class="modal-content">
+              <div class="modal-header border-0 pb-0">
+                <button
+                  type="button"
+                  class="btn-close ms-auto"
+                  data-bs-dismiss="modal"
+                  aria-label="Close"
+                ></button>
+              </div>
+              <div
+                class="modal-body"
+                style="max-height: 70vh; overflow-y: auto"
+              >
+                <div
+                  class="container-fluid d-flex flex-column align-items-center"
+                  style="min-height: 500px"
+                >
+                  <div class="profile-name">강준영</div>
+                  <div
+                    class="row g-3 align-items-center w-100 profile-row flex-grow-1"
+                    style="margin-top: 0.5rem"
+                  >
+                    <div class="col-12 col-md-6 d-flex justify-content-center">
+                      <div class="card w-100 profile-card">
+                        <div
+                          class="card-body d-flex justify-content-center align-items-center"
+                          style="height: 370px"
+                        >
+                          <img
+                            src="https://upload.wikimedia.org/wikipedia/commons/2/2f/Square_definition.svg"
+                            alt="..."
+                            class="img-fluid rounded border profile-img"
+                          />
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-12 col-md-6 d-flex justify-content-center">
+                      <div class="card w-100 profile-card">
+                        <div
+                          class="card-body"
+                          style="
+                            height: 370px;
+                            display: flex;
+                            flex-direction: column;
+                            justify-content: center;
+                            font-size: 1rem;
+                          "
+                        >
+                          <!-- 사람에 맞게 입력 -->
+                          <div class="mb-2"><b>직책:</b> Staff</div>
+                          <div class="mb-2"><b>연락처:</b> 010-4754-7393</div>
+                          <div class="mb-2">
+                            <b>메일:</b> kangh2580@naver.com
+                          </div>
+                          <div class="mb-2">
+                            <b>주소:</b> 대전광역시 서구 월평동
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <!-- 장점 카드도 크기 맞추기 -->
+                  <div class="row mt-3 w-100 advantage-row flex-grow-1">
+                    <div class="col-12 d-flex justify-content-center">
+                      <div class="card w-100 advantage-card mb-3">
+                        <div class="card-body">
+                          <h6 class="card-title">장점</h6>
+                          <!-- 텍스트 입력 -->
+                          <ul>
+                            <li>dddddddd</li>
+                            <li>dddddddddd</li>
+                            <li>dddd</li>
+                            <li>d</li>
+                            <li>dddddddd</li>
+                          </ul>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
 
@@ -188,7 +313,51 @@
         <div>
           <h1 class="text-white fw-bold mb-4">커리어</h1>
         </div>
-        <div style="height: 1000px"></div>
+        <div style="height: 1000px" class="carrer-main">
+          <div class="carrer-item">
+            <div class="carrer-inner">
+              <h4 class="text-white fw-bold">Apple Project</h4>
+              <h5 class="text-white">Think Different</h5>
+              <div class="carrer-description">
+                Swift와 React 기반으로 통합된 크로스 플랫폼 사용자 경험을 구현한
+                프로젝트
+              </div>
+              <ul class="carrer-skills">
+                <li class="text-white">#Swift</li>
+                <li class="text-white">#TypeScript</li>
+                <li class="text-white">#React</li>
+              </ul>
+            </div>
+            <div class="carrer-img">
+              <img
+                src="https://ichef.bbci.co.uk/ace/ws/640/cpsprodpb/15B38/production/_103388888_whatsubject.jpg.webp"
+                alt=""
+              />
+            </div>
+          </div>
+          <div class="carrer-item reverse">
+            <div class="carrer-inner">
+              <h4 class="text-white fw-bold">Google Project</h4>
+              <h5 class="text-white">Do the right thing.</h5>
+              <div class="carrer-description">
+                Kotlin과 Flutter, Angular를 활용해 멀티 플랫폼 서비스를
+                고성능으로 구축한 프로젝트
+              </div>
+              <ul class="carrer-skills">
+                <li class="text-white">#Kotlin</li>
+                <li class="text-white">#Flutter</li>
+                <li class="text-white">#Angular</li>
+                <li class="text-white">#TypeScript</li>
+              </ul>
+            </div>
+            <div class="carrer-img">
+              <img
+                src="https://3dnews.ru/assets/external/illustrations/2025/04/11/1121154/google.jpg"
+                alt=""
+              />
+            </div>
+          </div>
+        </div>
       </div>
     </section>
 
@@ -206,6 +375,11 @@
         <div class="dot" data-target="career"></div>
         <div class="tooltip-text">Career</div>
       </div>
+    </div>
+
+    <!-- ================= 링크 메일(왼쪽 하단 고정) ================= -->
+    <div class="link_mail">
+      <a href="mailto:team@mail.com"><i class="fa-solid fa-envelope"></i></a>
     </div>
 
     <!-- JavaScript 삽입 -->
