--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
             <a class="nav-link" href="#">Login</a>
           </li>
 
-            <li class="nav-item">
-              <a class="nav-link" href="#">Sign Up</a>
-            </li>
-          </ul>
-        </div>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Sign Up</a>
+          </li>
+        </ul>
       </div>
-    </nav>
+    </div>
+  </nav>
 
   <main class="main-body">
     <div class="container">
@@ -60,13 +60,13 @@
         </div>
 
 
-        <div class="ment2">
-          <a href="#" class="main-Ment2-color">BUILD</a>
-        </div>
+
+        <a href="#" class="ment2">SYNC</a>
+
         <div class="click-Motion">
           <i class="fa-regular fa-hand-pointer"></i>
         </div>
-        <div class="ment3">TEAMPLATE</div>
+        <div class="ment3">TEAMPLAY</div>
       </div>
     </div>
   </main>
