--- a/pages/TeamBase/index.html
+++ b/pages/TeamBase/index.html
@@ -170,69 +170,97 @@
         </div>
       </div>
       <!--MODAL NEW PART -->
-      <div class="modal" id="exampleModal" tabindex="-1">
-        <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-lg-custom">
-          <div class="modal-content">
-            <div class="modal-header border-0 pb-0">
-              <button type="button" class="btn-close ms-auto" data-bs-dismiss="modal" aria-label="Close"></button>
+      <div class="modal fade" id="exampleModal" tabindex="-1">
+        <div class="modal-dialog modal-dialog-centered">
+          <div class="modal-content" style="background-color: black">
+            <div class="modal-header" style="border-bottom: none">
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"
+                style="filter: invert(1); opacity: 0.8"></button>
             </div>
-            <div class="modal-body" style="max-height: 70vh; overflow-y: auto">
-              <div class="container-fluid d-flex flex-column align-items-center" style="min-height: 500px">
-                <div class="profile-name">강준영</div>
-                <div class="row g-3 align-items-center w-100 profile-row flex-grow-1" style="margin-top: 0.5rem">
-                  <div class="col-12 col-md-6 d-flex justify-content-center">
-                    <div class="card w-100 profile-card">
-                      <div class="card-body d-flex justify-content-center align-items-center" style="height: 370px">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/2/2f/Square_definition.svg" alt="..."
-                          class="img-fluid rounded border profile-img" />
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-12 col-md-6 d-flex justify-content-center">
-                    <div class="card w-100 profile-card">
-                      <div class="card-body" style="
-                                      height: 370px;
-                                      display: flex;
-                                      flex-direction: column;
-                                      justify-content: center;
-                                      font-size: 1rem;
-                                    ">
-                        <!-- 사람에 맞게 입력 -->
-                        <div class="mb-2"><b>직책:</b> Staff</div>
-                        <div class="mb-2"><b>연락처:</b> 010-4754-7393</div>
-                        <div class="mb-2"><b>메일:</b> kangh2580@naver.com</div>
-                        <div class="mb-2">
-                          <b>주소:</b> 대전광역시 서구 월평동
-                        </div>
-                      </div>
-                    </div>
-                  </div>
+            <div class="modal-body">
+              <div style="display: flex; gap: 20px; margin: 0 20px">
+                <!-- 이미지 영역 -->
+                <div style="
+                            position: relative;
+                            display: inline-block;
+                            border: 1px solid whitesmoke;
+                            border-radius: 8px;
+                          ">
+                  <img src="https://lh6.googleusercontent.com/proxy/DOHE0IxHby7NctAe3JqVTHSkHCKxXw7WnMvkFFVnzk8bS8rJ1DhHhE2bvmNVW0TqORJFKFdLplimiVaJbDMpCQsjS20lvSg9ndLu1ZWr1aYqkdcJ9LoDidsSga_c
+                          " alt="..." width="150" height="150" style="border-radius: 8px" />
+                  <h5 class="modal-title" style="
+                              position: absolute;
+                              top: 10px;
+                              left: 10px;
+                              color: whitesmoke;
+                              background-color: rgba(0, 0, 0, 0.7);
+                              padding: 3px 7px;
+                              border-radius: 4px;
+                              margin: 0;
+                              font-weight: bold;
+                              font-size: 14px;
+                            ">
+                    강준영
+                  </h5>
                 </div>
-                <!-- 장점 카드도 크기 맞추기 -->
-                <div class="row mt-3 w-100 advantage-row flex-grow-1">
-                  <div class="col-12 d-flex justify-content-center">
-                    <div class="card w-100 advantage-card mb-3">
-                      <div class="card-body">
-                        <h6 class="card-title">장점</h6>
-                        <!-- 텍스트 입력 -->
-                        <ul>
-                          <li>dddddddd</li>
-                          <li>dddddddddd</li>
-                          <li>dddd</li>
-                          <li>d</li>
-                          <li>dddddddd</li>
-                        </ul>
-                      </div>
-                    </div>
+                <!-- 개인정보 영역 -->
+                <div style="
+                            width: 260px;
+                            height: 150px;
+                            background-color: black;
+                            border: 1px solid whitesmoke;
+                            border-radius: 8px;
+                            padding: 15px;
+                            box-sizing: border-box;
+                          ">
+                  <div style="font-size: 14px; line-height: 1.6; color: whitesmoke">
+                    <p style="margin-bottom: 8px"><strong>직책:</strong> STAFF</p>
+                    <p style="margin-bottom: 8px">
+                      <strong>전화번호:</strong> 010-4754-7393
+                    </p>
+
+                    <p style="margin-bottom: 8px">
+                      <strong>이메일:</strong> kangh2580@naver.com
+                    </p>
+                    <p style="margin-bottom: 8px">
+                      <strong>주요스킬:</strong> HTML, CSS, JS, C++, C#
+                    </p>
                   </div>
                 </div>
               </div>
+              <!-- 하단 내용 영역 -->
+              <div style="margin: 20px 20px 0 20px">
+                <ul style="
+                            width: 426px;
+                            height: 200px;
+                            background-color: black;
+                            border: 1px solid whitesmoke;
+                            border-radius: 8px;
+                            padding: 15px;
+                            box-sizing: border-box;
+                            margin: 0;
+                            list-style: none;
+                            font-size: 14px;
+                            line-height: 1.6;
+                            color: whitesmoke;
+                          ">
+                  <h5>개인 작업물</h5>
+                  <li style="margin-bottom: 5px">• 구글 웹사이트 FRONTEND</li>
+                  <li style="margin-bottom: 5px">• 넷플릭스 메인 FRONTEND</li>
+                  <li style="margin-bottom: 5px">• 항목 3</li>
+                  <li style="margin-bottom: 5px">• 항목 4</li>
+                  <li style="margin-bottom: 5px">• 항목 5</li>
+                </ul>
+              </div>
+            </div>
+            <div class="modal-footer" style="border-top: none">
+              <button type="button" class="btn btn-dark" style="border: 1px solid whitesmoke">
+                CONTECT
+              </button>
             </div>
           </div>
         </div>
-
       </div>
-    </div>
   </section>
 
   <!-- ================= 커리어 소개 Section ================= -->
