feat: Modal Update

--- a/pages/TeamBase/index.html
+++ b/pages/TeamBase/index.html
@@ -172,7 +172,7 @@
       <!--MODAL NEW PART -->
       <div class="modal fade" id="exampleModal" tabindex="-1">
         <div class="modal-dialog modal-dialog-centered">
-          <div class="modal-content" style="background-color: black">
+          <div class="modal-content" style="background-color: black;  border: 2px solid #32CD32;">
             <div class="modal-header" style="border-bottom: none">
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"
                 style="filter: invert(1); opacity: 0.8"></button>
