--- a/pages/TeamBase/index.html
+++ b/pages/TeamBase/index.html
@@ -27,7 +27,7 @@
     <div class="container">
       <!-- About -->
       <div>
-        <h1 class="text-white fw-bold mb-4">About</h1>
+        <h1 class="text-white fw-bold mb-4 sub-title">About</h1>
       </div>
 
       <!-- 팀 이름 -->
@@ -132,7 +132,7 @@
     <div class="container">
       <!-- 팀원 내용 -->
       <div>
-        <h1 class="text-white fw-bold mb-4">팀원</h1>
+        <h1 class="text-white fw-bold mb-4 sub-title">Team member</h1>
       </div>
       <div style="height: 1000px" class="member-main team-container">
         <!-- 팀원 1 -->
@@ -172,7 +172,7 @@
       <!--MODAL NEW PART -->
       <div class="modal fade" id="exampleModal" tabindex="-1">
         <div class="modal-dialog modal-dialog-centered">
-          <div class="modal-content" style="background-color: black;  border: 2px solid #32CD32;">
+          <div class="modal-content" style="background-color: black;  border: 2px solid #DA70D6;">
             <div class="modal-header" style="border-bottom: none">
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"
                 style="filter: invert(1); opacity: 0.8"></button>
@@ -268,7 +268,7 @@
     <div class="container">
       <!-- 커리어 내용 -->
       <div>
-        <h1 class="text-white fw-bold mb-4">커리어</h1>
+        <h1 class="text-white fw-bold mb-4 sub-title">Carrers</h1>
       </div>
       <div style="height: 1000px" class="carrer-main">
         <div class="carrer-item">
