chore: 내용채우기

--- a/pages/TeamBase/index.html
+++ b/pages/TeamBase/index.html
@@ -152,10 +152,10 @@
             <button type="button" data-bs-toggle="modal" data-bs-target="#exampleModal-hyunjun"
               style="all: unset; cursor: pointer">
               <!-- 멤버 사진 -->
-              <img src="/assets/img/TeamLogo.png" alt="" />
+              <img src="/assets/img/hyunjun-profile.jpg" alt="" />
             </button>
           </div>
-          <div class="member-info">현준</div>
+          <div class="member-info">안녕하세요. <br>사용자에게 편리함과 즐거움을 줄 수 있는 서비스를 만들고자 노력합니다. <br>효율적인 소통과 꾸준한 개선을 통해, <br>모두가 만족하는 결과물을 만들고 싶습니다.</div>
         </div>
         <!-- 팀원 3 -->
         <div class="member-box">
@@ -281,8 +281,7 @@
                             border: 1px solid whitesmoke;
                             border-radius: 8px;
                           ">
-                  <img src="https://lh6.googleusercontent.com/proxy/DOHE0IxHby7NctAe3JqVTHSkHCKxXw7WnMvkFFVnzk8bS8rJ1DhHhE2bvmNVW0TqORJFKFdLplimiVaJbDMpCQsjS20lvSg9ndLu1ZWr1aYqkdcJ9LoDidsSga_c
-                          " alt="..." width="150" height="150" style="border-radius: 8px" />
+                  <img src="/assets/img/hyunjun-profile.jpg" alt="..." width="150" height="150" style="border-radius: 8px" />
                   <h5 class="modal-title" style="
                               position: absolute;
                               top: 10px;
@@ -309,16 +308,16 @@
                             box-sizing: border-box;
                           ">
                   <div style="font-size: 14px; line-height: 1.6; color: whitesmoke">
-                    <p style="margin-bottom: 8px"><strong>직책:</strong> STAFF</p>
+                    <p style="margin-bottom: 8px"><strong>직책:</strong> Scrum Master</p>
                     <p style="margin-bottom: 8px">
-                      <strong>전화번호:</strong> 010-4754-7393
+                      <strong>전화번호:</strong> 010-0000-0000
                     </p>
 
                     <p style="margin-bottom: 8px">
-                      <strong>이메일:</strong> kangh2580@naver.com
+                      <strong>이메일:</strong> kdsafo123@naver.com
                     </p>
                     <p style="margin-bottom: 8px">
-                      <strong>주요스킬:</strong> HTML, CSS, JS, C++, C#
+                      <strong>주요스킬:</strong> HTML, CSS, JS, REACT
                     </p>
                   </div>
                 </div>
@@ -340,11 +339,11 @@
                             color: whitesmoke;
                           ">
                   <h5>개인 작업물</h5>
-                  <li style="margin-bottom: 5px">• 구글 웹사이트 FRONTEND</li>
-                  <li style="margin-bottom: 5px">• 넷플릭스 메인 FRONTEND</li>
-                  <li style="margin-bottom: 5px">• 항목 3</li>
-                  <li style="margin-bottom: 5px">• 항목 4</li>
-                  <li style="margin-bottom: 5px">• 항목 5</li>
+                  <li style="margin-bottom: 5px">• 싱클리 FRONTEND</li>
+                  <li style="margin-bottom: 5px">• 코알누 스터디 참여</li>
+                  <li style="margin-bottom: 5px">• </li>
+                  <li style="margin-bottom: 5px">• </li>
+                  <li style="margin-bottom: 5px">• </li>
                 </ul>
               </div>
             </div>
