feat: Modify team member section styles

--- a/pages/TeamBase/index.html
+++ b/pages/TeamBase/index.html
@@ -78,7 +78,7 @@
         <!-- 팀 이름 -->
         <div class="team-container">
           <div class="team-name">
-            <h1 class="fw-bold">aespa</h1>
+            <h1 class="fw-bold">SYNKLY</h1>
           </div>
           <div class="team-img-wrapper">
             <img
@@ -88,16 +88,16 @@
           </div>
           <div class="row justify-content-center text-center mt-3">
             <div class="col-6 col-md-3 px-0">
-              <span class="hashtag"><a href="#">#aespa</a></span>
+              <span class="hashtag"><a href="#">#Connect</a></span>
             </div>
             <div class="col-6 col-md-3 px-0">
-              <span class="hashtag"><a href="#">#NextLevel</a></span>
+              <span class="hashtag"><a href="#">#SYNC</a></span>
             </div>
             <div class="col-6 col-md-3 px-0 mt-mobile">
-              <span class="hashtag"><a href="#">#SM</a></span>
+              <span class="hashtag"><a href="#">#Teamplay</a></span>
             </div>
             <div class="col-6 col-md-3 px-0 mt-mobile">
-              <span class="hashtag"><a href="#">#광야</a></span>
+              <span class="hashtag"><a href="#">#Together</a></span>
             </div>
           </div>
         </div>
@@ -218,10 +218,19 @@
                 style="all: unset; cursor: pointer"
               >
                 <!-- 멤버 사진 -->
-                <img src="/assets/img/TeamLogo.png" alt="" />
+                <img src="/assets/img/jisung-profile.png" alt="" />
               </button>
             </div>
-            <div class="member-info">지성님</div>
+            <div class="member-body">
+              <h3 class="member-name">안지성</h3>
+              <div class="member-info">
+                안녕하세요.<br />
+                저는 사용자의 만족과 몰입감을 최우선으로, UI·UX 설계와 성능
+                최적화 경험을 쌓아왔습니다.<br />
+                효율적인 문제 해결과 품질 개선을 통해 완성도를 높이며,<br />
+                직관적이고 즐길 수 있는 경험을 만드는 개발자로 성장하겠습니다.
+              </div>
+            </div>
           </div>
           <!-- 팀원 2 -->
           <div class="member-box">
@@ -236,10 +245,13 @@
                 <img src="/assets/img/hyunjun-profile.jpg" alt="" />
               </button>
             </div>
-            <div class="member-info">
-              안녕하세요. <br />사용자에게 편리함과 즐거움을 줄 수 있는 서비스를
-              만들고자 노력합니다. <br />효율적인 소통과 꾸준한 개선을 통해,
-              <br />모두가 만족하는 결과물을 만들고 싶습니다.
+            <div class="member-body">
+              <h3 class="member-name">이현준</h3>
+              <div class="member-info">
+                안녕하세요. <br />사용자에게 편리함과 즐거움을 줄 수 있는
+                서비스를 만들고자 노력합니다. <br />효율적인 소통과 꾸준한
+                개선을 통해, <br />모두가 만족하는 결과물을 만들고 싶습니다.
+              </div>
             </div>
           </div>
           <!-- 팀원 3 -->
@@ -255,7 +267,10 @@
                 <img src="/assets/img/TeamLogo.png" alt="" />
               </button>
             </div>
-            <div class="member-info">준영님</div>
+            <div class="member-body">
+              <h3 class="member-name">강준영</h3>
+              <div class="member-info">준영님 코멘트~~~</div>
+            </div>
           </div>
         </div>
       </div>
@@ -290,8 +305,7 @@
                   "
                 >
                   <img
-                    src="https://lh6.googleusercontent.com/proxy/DOHE0IxHby7NctAe3JqVTHSkHCKxXw7WnMvkFFVnzk8bS8rJ1DhHhE2bvmNVW0TqORJFKFdLplimiVaJbDMpCQsjS20lvSg9ndLu1ZWr1aYqkdcJ9LoDidsSga_c
-                          "
+                    src="/assets/img/jisung-profile.png"
                     alt="..."
                     width="150"
                     height="150"
@@ -330,15 +344,13 @@
                   <div
                     style="font-size: 14px; line-height: 1.6; color: whitesmoke"
                   >
+                    <p style="margin-bottom: 8px"><strong>직책:</strong> PO</p>
                     <p style="margin-bottom: 8px">
-                      <strong>직책:</strong> STAFF
-                    </p>
-                    <p style="margin-bottom: 8px">
-                      <strong>전화번호:</strong> 010-4754-7393
+                      <strong>전화번호:</strong> 010-1234-5678
                     </p>
 
                     <p style="margin-bottom: 8px">
-                      <strong>이메일:</strong> kangh2580@naver.com
+                      <strong>이메일:</strong> dalssagi00@gmail.com
                     </p>
                     <p style="margin-bottom: 8px">
                       <strong>주요스킬:</strong> HTML, CSS, JS, C++, C#
@@ -365,11 +377,11 @@
                   "
                 >
                   <h5>개인 작업물</h5>
-                  <li style="margin-bottom: 5px">• 구글 웹사이트 FRONTEND</li>
-                  <li style="margin-bottom: 5px">• 넷플릭스 메인 FRONTEND</li>
-                  <li style="margin-bottom: 5px">• 항목 3</li>
-                  <li style="margin-bottom: 5px">• 항목 4</li>
-                  <li style="margin-bottom: 5px">• 항목 5</li>
+                  <li style="margin-bottom: 5px">• 싱클리 FRONTEND</li>
+                  <li style="margin-bottom: 5px">• 코알누 스터디</li>
+                  <li style="margin-bottom: 5px">• Apple Project FRONTEND</li>
+                  <li style="margin-bottom: 5px">• Google Project FRONTEND</li>
+                  <li style="margin-bottom: 5px">• Netflix Project FRONTEND</li>
                 </ul>
               </div>
             </div>
