chore: 코드 리팩토링 및 nav바 높이 수정

--- a/pages/TeamBase/index.html
+++ b/pages/TeamBase/index.html
@@ -31,7 +31,7 @@
     <!-- |코드 작성 시작| -->
 
     <!-- ================= Navbar Part ================= -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top dd">
       <div class="container-fluid">
         <a class="navbar-brand" href="/index.html">
           <img
