--- a/pages/TeamBase/index.html
+++ b/pages/TeamBase/index.html
@@ -169,7 +169,7 @@
                 alt="" />
             </button>
           </div>
-          <div class="member-info">안녕하세요. <br>사용자가 불편함과 어색함 없이 편안한 서비스를 즐기실 수 있도록 만들고 있습니다.<br> 원활한 의사소통으로 빠르게 개선을 하며,
+          <div class="member-info">안녕하세요1. <br>사용자가 불편함과 어색함 없이 편안한 서비스를 즐기실 수 있도록 만들고 있습니다.<br> 원활한 의사소통으로 빠르게 개선을 하며,
             최대한 반영을 하게 만들어보겠습니다.
           </div>
         </div>
