--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
   <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
-        <img src="assets/img/로고W4.png" src="assets/img/test.png" alt="..." class="img-fluid ms-4" style="max-height: 40px; width: auto" />
+        <img src="assets/img/로고W4.png" src="assets/img/test.png" alt="..." class="img-fluid ms-4"
+          style="max-height: 40px; width: auto" />
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -52,7 +53,7 @@
 
         <div class="center-group">
           <div class="main-Logo-Center">
-            <img src="assets/img/로고W4.png"  alt="..." class="img-fluid" style="max-height: 400px; width: auto" />
+            <img src="assets/img/로고W4.png" alt="..." class="img-fluid" style="max-height: 400px; width: auto" />
           </div>
         </div>
 
