--- a/index.html
+++ b/index.html
@@ -29,11 +29,9 @@
       <div class="collapse navbar-collapse me-4" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link" href="#">Menu</a>
+            <a class="nav-link" href="#">SYNC</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Menu</a>
-          </li>
+
           <li class="nav-item">
             <a class="nav-link" href="#">Login</a>
           </li>
