chore: Update team image

--- a/pages/TeamBase/index.html
+++ b/pages/TeamBase/index.html
@@ -31,7 +31,7 @@
     <!-- |코드 작성 시작| -->
 
     <!-- ================= Navbar Part ================= -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top dd">
+    <nav class="navbar bg-body-tertiary sticky-top dd">
       <div class="container-fluid">
         <a class="navbar-brand" href="/index.html">
           <img
@@ -41,29 +41,17 @@
             style="max-height: 40px; width: auto"
           />
         </a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse me-4" id="navbarSupportedContent">
-          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-            <li class="nav-item me-4">
-              <a class="nav-link" href="/pages/TeamSearch/index.html">SYNC</a>
-            </li>
-            <li class="nav-item">
-              <img
-                src="https://mblogthumb-phinf.pstatic.net/MjAyMTAzMDhfMTky/MDAxNjE1MTg3MDkzMzQ5.LF_wRgeqp0svkxCRWSCxh0GLmSTPPXoY7Y6CpNzY1icg.mKeYJaQmfYcAFLZL_TBpxZZ2PQkYFfju_7hbj5rHnEYg.PNG.aksen244/30fa75cf-0027-4396-8b32-e1d362bc7c57.png?type=w800"
-              />
-            </li>
-          </ul>
-        </div>
+
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+          <li class="nav-item me-4">
+            <a class="nav-link" href="/pages/TeamSearch/index.html">SYNC</a>
+          </li>
+          <li class="nav-item">
+            <img
+              src="https://mblogthumb-phinf.pstatic.net/MjAyMTAzMDhfMTky/MDAxNjE1MTg3MDkzMzQ5.LF_wRgeqp0svkxCRWSCxh0GLmSTPPXoY7Y6CpNzY1icg.mKeYJaQmfYcAFLZL_TBpxZZ2PQkYFfju_7hbj5rHnEYg.PNG.aksen244/30fa75cf-0027-4396-8b32-e1d362bc7c57.png?type=w800"
+            />
+          </li>
+        </ul>
       </div>
     </nav>
 
@@ -81,10 +69,7 @@
             <h1 class="fw-bold">SYNKLY</h1>
           </div>
           <div class="team-img-wrapper">
-            <img
-              src="https://storage.kpop-radar.com/artist/images/d2b62c8d-1821-42d2-9824-133a1d74ed2f.jpg"
-              class="team-img"
-            />
+            <img src="/assets/img/team-background.png" class="team-img" />
           </div>
           <div class="row justify-content-center text-center mt-3">
             <div class="col-6 col-md-3 px-0">
@@ -193,7 +178,7 @@
           <div class="p-3">
             <h4 class="interview-question">Q. 우리 팀은?</h4>
             <div class="interview-answer">
-              <p>✨ 이런 팀이에요. 열정 있고 협업 잘하는 멤버들이 가득한!</p>
+              <p>✨ 열정 있고 협업 잘하는 멤버들이 가득한!</p>
             </div>
           </div>
         </div>
